--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Multi-Sensor Counter Display</title>
   <style>
     :root {
@@ -23,6 +23,7 @@
       background: linear-gradient(180deg, #07101a 0%, var(--bg) 100%);
       color: #e6eef6;
       padding: 24px;
+      box-sizing: border-box;
     }
 
     .wrap {
@@ -30,6 +31,7 @@
       gap: 32px;
       max-width: 1200px;
       margin: 0 auto;
+      flex-wrap: wrap;
     }
 
     .left-panel {
@@ -37,6 +39,7 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
+      flex: 0 0 auto;
     }
 
     .battery {
@@ -77,7 +80,7 @@
     }
 
     .main-content {
-      flex: 1;
+      flex: 1 1 100%;
     }
 
     .top {
@@ -85,6 +88,8 @@
       align-items: center;
       justify-content: space-between;
       margin-bottom: 20px;
+      flex-wrap: wrap;
+      gap: 12px;
     }
 
     .title h1 {
@@ -120,7 +125,7 @@
 
     .grid {
       display: grid;
-      grid-template-columns: repeat(3, minmax(200px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
       gap: 18px;
     }
 
@@ -165,6 +170,7 @@
       justify-content: center;
       color: var(--muted);
       font-size: 12px;
+      flex-wrap: wrap;
     }
 
     .small-btn {
@@ -189,11 +195,50 @@
       justify-content: center;
       flex-wrap: wrap;
     }
+
+    /* Responsive for small screens */
+    @media (max-width: 600px) {
+      .wrap {
+        flex-direction: column;
+        gap: 20px;
+        padding: 12px;
+      }
+
+      .top {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+
+      .title h1 {
+        font-size: 18px;
+      }
+
+      .card {
+        padding: 16px;
+      }
+
+      .counter {
+        font-size: 36px;
+      }
+
+      .battery {
+        width: 40px;
+        height: 160px;
+      }
+
+      .weight-label {
+        font-size: 12px;
+      }
+
+      .small-btn {
+        padding: 5px 8px;
+        font-size: 11px;
+      }
+    }
   </style>
 </head>
 <body>
   <div class="wrap" role="main">
-    <!-- Left Panel: Battery -->
     <div class="left-panel">
       <div class="battery">
         <div id="battery-fill" class="battery-fill" style="height: 0%;"></div>
@@ -203,7 +248,6 @@
       </div>
     </div>
 
-    <!-- Right Panel: Grid & Status -->
     <div class="main-content">
       <div class="top">
         <div class="title">
@@ -229,7 +273,6 @@
     const batteryFill = document.getElementById('battery-fill');
     const weightText = document.getElementById('weight-value');
 
-    // Define sensors
     const sensors = [1, 2, 3, 4, 5, 6].map(n => ({
       type: 'counter',
       id: n,
@@ -239,7 +282,6 @@
       el: null
     }));
 
-    // Weight sensor added last
     sensors.push({
       type: 'weight',
       id: 'W',
@@ -249,7 +291,6 @@
       el: null
     });
 
-    // Create cards for each sensor
     function makeCard(sensor) {
       const div = document.createElement('div');
       div.className = "card";
@@ -278,7 +319,6 @@
         resetBtn: sensor.type === 'counter' ? div.querySelector(`#reset-${sensor.id}`) : null,
       };
 
-      // Event listeners for counter buttons
       if (sensor.type === 'counter') {
         sensor.el.refreshBtn.addEventListener('click', () => fetchSensorData(sensor));
         sensor.el.copyBtn.addEventListener('click', () => {
@@ -291,21 +331,16 @@
       }
     }
 
-    // Initialize cards
     sensors.forEach(makeCard);
 
-    // Fetch sensor data from Firebase
     async function fetchSensorData(sensor) {
       try {
         const response = await fetch(databaseUrl + sensor.valuePath);
         if (!response.ok) throw new Error(`HTTP error! status: ${response.status}`);
 
         const data = await response.json();
-
-        // Update lastValue
         sensor.lastValue = data;
 
-        // Update UI
         if (sensor.el && sensor.el.counter) {
           if (sensor.type === 'weight') {
             sensor.el.counter.textContent = data.toFixed(2);
@@ -313,11 +348,7 @@
             updateBattery(data);
           } else {
             sensor.el.counter.textContent = data;
-            if (data > 1000) {
-              sensor.el.counter.classList.add('warning');
-            } else {
-              sensor.el.counter.classList.remove('warning');
-            }
+            sensor.el.counter.classList.toggle('warning', data > 1000);
           }
         }
 
@@ -332,7 +363,6 @@
       }
     }
 
-    // Reset counter sensor value to 10 in Firebase
     async function resetSensorValue(sensor) {
       if (sensor.type !== 'counter') return;
       if (!confirm(`Reset Sensor ${sensor.id} value to 10?`)) return;
@@ -343,9 +373,7 @@
           body: JSON.stringify(10)
         });
         if (!resetResponse.ok) throw new Error(`HTTP error! status: ${resetResponse.status}`);
-
         sensor.lastValue = 10;
-        // Update UI immediately
         sensor.el.counter.textContent = 10;
         sensor.el.counter.classList.remove('warning');
         sensor.el.last.textContent = `Last: ${new Date().toLocaleTimeString()}`;
@@ -354,48 +382,36 @@
       }
     }
 
-    // Update battery fill based on weight (assume weight max 10)
     function updateBattery(weight) {
       let percent = Math.min(Math.max(weight * 10, 0), 100);
       batteryFill.style.height = `${percent}%`;
     }
 
-    // Connection status
     let connected = false;
     function setConnectionStatus(status) {
       connected = status;
-      if (status) {
-        connDot.classList.remove('off');
-        connDot.classList.add('ok');
-        connDot.title = 'Connected';
-        connText.textContent = 'Connected';
-      } else {
-        connDot.classList.remove('ok');
-        connDot.classList.add('off');
-        connDot.title = 'Disconnected';
-        connText.textContent = 'Disconnected';
-      }
+      connDot.classList.toggle('off', !status);
+      connDot.classList.toggle('ok', status);
+      connDot.title = status ? 'Connected' : 'Disconnected';
+      connText.textContent = status ? 'Connected' : 'Disconnected';
     }
 
-    // Countdown logic for weight sensor (10 to 0)
     function countdownWeightSensor() {
       const weightSensor = sensors.find(s => s.type === 'weight');
       if (!weightSensor) return;
 
       if (weightSensor.lastValue === null) {
-        // Initialize to 10 if no value yet
         weightSensor.lastValue = 10;
       } else if (weightSensor.lastValue > 0) {
         weightSensor.lastValue = Math.max(0, weightSensor.lastValue - 1);
       }
-      // Update Firebase weight value to new lastValue
+
       fetch(databaseUrl + weightSensor.valuePath, {
         method: 'PUT',
         headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify(weightSensor.lastValue)
       }).catch(e => console.error('Failed to update weight in Firebase:', e));
 
-      // Update UI
       if (weightSensor.el && weightSensor.el.counter) {
         weightSensor.el.counter.textContent = weightSensor.lastValue.toFixed(0);
         weightText.textContent = `${weightSensor.lastValue.toFixed(0)} kg`;
@@ -404,15 +420,12 @@
       }
     }
 
-    // Initial data fetch for all sensors
     async function fetchAll() {
       await Promise.all(sensors.map(fetchSensorData));
     }
 
-    // Initial fetch
     fetchAll();
 
-    // Poll counter sensors every pollInterval ms
     setInterval(() => {
       sensors.forEach(sensor => {
         if (sensor.type === 'counter') {
@@ -421,11 +434,9 @@
       });
     }, pollInterval);
 
-    // Countdown weight sensor every 5 seconds (to slow down countdown)
     setInterval(() => {
       countdownWeightSensor();
     }, 5000);
-
   </script>
 </body>
 </html>
