--- a/dashboard.html
+++ b/dashboard.html
@@ -15,36 +15,197 @@
       --battery-bg: #1c2733;
       --battery-fill: #2bf58f;
     }
+
     html, body {
-      margin: 0; padding: 24px;
+      margin: 0;
+      padding: 24px;
       background: linear-gradient(180deg, #07101a 0%, var(--bg) 100%);
       font-family: Inter, sans-serif;
       color: #e6eef6;
       box-sizing: border-box;
     }
-    .wrap { display: flex; flex-wrap: wrap; gap: 32px; max-width: 1200px; margin: auto; }
-    .left-panel { display: flex; flex-direction: column; align-items: center; }
-    .battery { width: 60px; height: 240px; background: var(--battery-bg); border-radius: 12px; border: 2px solid var(--glass); position: relative; overflow: hidden; margin-bottom: 10px; }
-    .battery::after { content: ""; position: absolute; top: -12px; left: 50%; transform: translateX(-50%); width: 24px; height: 8px; background: var(--battery-bg); border-radius: 4px; }
-    .battery-fill { position: absolute; bottom: 0; width: 100%; background: var(--battery-fill); transition: height 0.4s ease; }
-    .weight-label { font-size: 14px; color: var(--muted); text-align: center; }
-    .main-content { flex: 1; }
-    .top { display: flex; justify-content: space-between; flex-wrap: wrap; gap: 12px; }
-    .title h1 { font-size: 22px; margin: 0; }
-    .title p { margin: 4px 0 0; font-size: 13px; color: var(--muted); }
-    .status { display: flex; align-items: center; gap: 10px; }
-    .dot { width: 12px; height: 12px; border-radius: 50%; }
-    .dot.ok { background: linear-gradient(180deg, #2bf58f, #00a64b); }
-    .dot.off { background: linear-gradient(180deg, #ff7b7b, #ff3b3b); }
-    .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 18px; }
-    .card { background: var(--glass); border-radius: 14px; padding: 22px; display: flex; flex-direction: column; align-items: center; border: 1px solid rgba(255,255,255,0.05); box-shadow: 0 6px 20px rgba(2,6,23,0.6); }
-    .card h2 { margin: 0; font-size: 15px; color: var(--muted); }
-    .counter { font-size: 48px; font-weight: 700; color: var(--accent); }
-    .counter.warning { color: var(--warning); }
-    .meta { font-size: 12px; color: var(--muted); }
-    .controls { display: flex; gap: 6px; margin-top: 8px; flex-wrap: wrap; justify-content: center; }
-    .small-btn { background: var(--glass); border: 1px solid rgba(255,255,255,0.03); padding: 6px 10px; border-radius: 8px; color: var(--muted); font-size: 12px; cursor: pointer; }
-    .small-btn:hover { background: rgba(255,255,255,0.07); }
+
+    .wrap {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 32px;
+      max-width: 1200px;
+      margin: auto;
+    }
+
+    .left-panel {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    .battery {
+      width: 60px;
+      height: 240px;
+      background: var(--battery-bg);
+      border-radius: 12px;
+      border: 2px solid var(--glass);
+      position: relative;
+      overflow: hidden;
+      margin-bottom: 10px;
+    }
+
+    .battery::after {
+      content: "";
+      position: absolute;
+      top: -12px;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 24px;
+      height: 8px;
+      background: var(--battery-bg);
+      border-radius: 4px;
+    }
+
+    .battery-fill {
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      background: var(--battery-fill);
+      transition: height 0.4s ease;
+    }
+
+    .weight-label {
+      font-size: 14px;
+      color: var(--muted);
+      text-align: center;
+    }
+
+    .main-content {
+      flex: 1;
+    }
+
+    .top {
+      display: flex;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      gap: 12px;
+    }
+
+    .title h1 {
+      font-size: 22px;
+      margin: 0;
+    }
+
+    .title p {
+      margin: 4px 0 0;
+      font-size: 13px;
+      color: var(--muted);
+    }
+
+    .status {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
+
+    .dot {
+      width: 12px;
+      height: 12px;
+      border-radius: 50%;
+    }
+
+    .dot.ok {
+      background: linear-gradient(180deg, #2bf58f, #00a64b);
+    }
+
+    .dot.off {
+      background: linear-gradient(180deg, #ff7b7b, #ff3b3b);
+    }
+
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 18px;
+    }
+
+    .card {
+      background: var(--glass);
+      border-radius: 14px;
+      padding: 22px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      border: 1px solid rgba(255,255,255,0.05);
+      box-shadow: 0 6px 20px rgba(2,6,23,0.6);
+    }
+
+    .card h2 {
+      margin: 0;
+      font-size: 15px;
+      color: var(--muted);
+    }
+
+    .counter {
+      font-size: 48px;
+      font-weight: 700;
+      color: var(--accent);
+    }
+
+    .counter.warning {
+      color: var(--warning);
+    }
+
+    .meta {
+      font-size: 12px;
+      color: var(--muted);
+    }
+
+    .controls {
+      display: flex;
+      gap: 6px;
+      margin-top: 8px;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+
+    .small-btn {
+      background: var(--glass);
+      border: 1px solid rgba(255,255,255,0.03);
+      padding: 6px 10px;
+      border-radius: 8px;
+      color: var(--muted);
+      font-size: 12px;
+      cursor: pointer;
+    }
+
+    .small-btn:hover {
+      background: rgba(255,255,255,0.07);
+    }
+
+    /* 🔁 Responsive styling for mobile */
+    @media (max-width: 768px) {
+      .wrap {
+        flex-direction: column-reverse;
+        align-items: center;
+        padding: 16px;
+      }
+
+      .left-panel {
+        flex-direction: row;
+        gap: 16px;
+        justify-content: center;
+        margin-top: 20px;
+      }
+
+      .battery {
+        height: 160px;
+        width: 40px;
+      }
+
+      .weight-label {
+        font-size: 16px;
+      }
+
+      .counter {
+        font-size: 36px;
+      }
+    }
   </style>
 </head>
 <body>
@@ -64,6 +225,7 @@
           <div id="connText" style="font-size:13px;color:var(--muted)">Disconnected</div>
         </div>
       </div>
+
       <div id="grid" class="grid"></div>
 
       <hr style="margin-top:30px; border-color: #333;">
